profile pic spacing made it get cut off in animation - fixed

--- a/src/less/bootstrap-theme/pages.less
+++ b/src/less/bootstrap-theme/pages.less
@@ -7,7 +7,7 @@
    ========================================================================== */
 
 .profile-pic {
-    margin: 20px 0 0 0;
+    margin: 20px 0;
     img {
         border: 7px solid #e5e6ea;
     }
